fix url and align

--- a/home/static/base.css
+++ b/home/static/base.css
@@ -74,6 +74,7 @@ body {
 
 .pictures {
     margin-top: 20px;
+    margin-bottom: 20px;
     text-align: left;
 }
 
